refactor(*): remove `isClientSideOnly`
